# JulIde

./: CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
.storybook/: main.ts  preview.ts
.storybook/mocks/: tauri-core.ts  tauri-event.ts
docs/: DOCUMENTATION.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: debugger.rs  fs.rs  git.rs  git_auth.rs  git_gitea.rs  git_github.rs  git_gitlab.rs  git_provider.rs  julia.rs  lib.rs  lsp.rs  main.rs  plugins.rs  pluto.rs  pty.rs  search.rs  settings.rs  watcher.rs
src/__test__/: setup.ts  storeTestUtils.ts  tauriMock.ts
src/components/ActivityBar/: ActivityBar.stories.tsx  ActivityBar.tsx
src/components/CommandPalette/: CommandPalette.tsx
src/components/Debugger/: DebugPanel.tsx
src/components/Editor/: Breadcrumb.tsx  EditorSplitContainer.tsx  EditorTabs.tsx  MonacoEditor.tsx  juliaLanguage.ts
src/components/FileExplorer/: FileExplorer.tsx
src/components/Git/: DiffViewer.tsx  GitAuthSettings.tsx  (+5 more)
src/lsp/: LspClient.test.ts  LspClient.ts  juliaProviders.test.ts  juliaProviders.ts
src/services/: builtinContributions.ts  keybindings.test.ts  keybindings.ts  pluginContext.test.ts  pluginContext.ts  pluginHost.ts
src/stores/: useIdeStore.test.ts  useIdeStore.ts  usePluginStore.test.ts  usePluginStore.ts  useSettingsStore.test.ts  useSettingsStore.ts
src/themes/: themes.ts
src/types/: git.ts  index.ts  plugin.ts
(+16 files in other folders)
